Fixed table to work better on small devices

--- a/app/photolist/photolist.less
+++ b/app/photolist/photolist.less
@@ -42,10 +42,26 @@
   padding: 20px;
 }
 
+.user-photo {
+  width: 400px;
+  height: 150px;
+}
 
-.img-thumbnail{
-  width: 300px;
-  height:175px;
+.tag {
+  background-color: white;
+  padding: 5px 5px 5px 5px;
+  border-radius: 5px;
+  border: rgb(197, 197, 197) 1px solid;
+}
+
+.order-by {
+  padding: 5px 50px 5px 5px;
+
+}
+
+.search-by {
+  padding: 0px 0px 0px 0px;
+
 }
 
 
